upgrade vertx to 3.8.4, upgrade min java version to 11, migrate to Dockerfile